--- a/Ordering/OrdersApi/appsettings.Development.json
+++ b/Ordering/OrdersApi/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "OrdersContextConnection": "Server=localhost;Database=Orders; user id=sa;password=Insecure!12345"
-  }
-
+    "OrdersContextConnection": "Server=localhost;Database=FACEORDER; user id=sa;password=Insecure!12345;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
