--- a/Faces.Web/Faces.WebMvc/Faces.WebMvc.csproj
+++ b/Faces.Web/Faces.WebMvc/Faces.WebMvc.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MassTransit" Version="7.1.8" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.8" />
+    <PackageReference Include="Refit" Version="6.0.38" />
   </ItemGroup>
 
   <ItemGroup>
