--- a/Faces.Web/Faces.WebMvc/appsettings.Development.json
+++ b/Faces.Web/Faces.WebMvc/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ApiServiceLocations": {
+    "OrdersApiLocation": "localhost:6002"
   }
 }
