--- a/CustomerNotification/NotificationService/appsettings.json
+++ b/CustomerNotification/NotificationService/appsettings.json
@@ -11,7 +11,7 @@
   "EmailConfiguration": {
     "From": "secret",
     "SmtpServer": "secret",
-    "Port": "secret",
+    "Port": 0,
     "Username": "secret",
     "Password": "secret"
   }
