--- a/Ordering/OrdersApi/OrdersApi.csproj
+++ b/Ordering/OrdersApi/OrdersApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>4033fd3b-60d4-4999-bdc7-606333edef47</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
