--- a/Faces.Web/Faces.WebMvc/appsettings.Development.json
+++ b/Faces.Web/Faces.WebMvc/appsettings.Development.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
-  "ApiServiceLocations": {
-    "OrdersApiLocation": "localhost:6002"
-  }
+  "OrdersApiUrl": "http://localhost:6002"
 }
