--- a/Ordering/OrdersApi/appsettings.json
+++ b/Ordering/OrdersApi/appsettings.json
@@ -1,10 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrdersContextConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
